--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="p4 md:w-1/2 md:pl-2">
 
                 <p class="text-center md:text-left md:flex md:items-center md:h-full md:mb-0">
-                    <a href="https://maps.app.goo.gl/tiYLCJmhNuvaRqP4A" target="_blank" title="Get Directions at Google Maps" class="text-grey-darker hover:text-grey-darkest hover:underline">Ordinariate Members of East Tennessee<br />
+                    <a href="https://maps.app.goo.gl/SuHZECxR43p3BkU46" target="_blank" title="Get Directions at Google Maps" class="text-grey-darker hover:text-grey-darkest hover:underline">Ordinariate Members of East Tennessee<br />
                       1810 Howard Dr<br />
                       Knoxville, TN 37918
                       </a>
@@ -87,7 +87,7 @@
     <div class="p4 md:w-1/2 md:pl-2">
 
         <p class="text-center md:text-left md:flex md:items-center md:h-full md:mb-0">
-            <a href="https://maps.app.goo.gl/SuHZECxR43p3BkU46" target="_blank" title="Get Directions at Google Maps" class="text-grey-darker hover:text-grey-darkest hover:underline">Omega Graduate School<br />
+            <a href="https://maps.app.goo.gl/tiYLCJmhNuvaRqP4A" target="_blank" title="Get Directions at Google Maps" class="text-grey-darker hover:text-grey-darkest hover:underline">Omega Graduate School<br />
               500 Oxford Dr<br />
               Dayton, TN 37321
               </a>
