--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 <div id="">
     <div id="calendar"></div>
 
-    To be announced...
+    October 8th  | Father Elijah and the Benedictines of the Divine Will <br>
+    October 22nd | &#8224 Matthew Michael Flynn, &#8224 Annie Diaz, &#8224 Chris de Paz, and &#8224 David Klinzing
     <!-- <status-text>Loading...</status-text> -->
     <!-- <div v-for="mass in masses_this_week" class="pb-2 mb-2 border-b" > -->
 
