--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
     <meta name="msapplication-TileColor" content="#910113">
     <meta name="theme-color" content="#306ca9">
 
+
 </head>
 
 <body class="font-serif leading-normal text-base bg-grey-lightest antialiased">
+<style>
+a {
+color: #0077B6;
+background-color: transparent;
+text-decoration: none;
+}
+</style>
 
     <div class="flex flex-col min-h-screen">
         <header class="w-full">
@@ -64,7 +72,7 @@
             <div class="p4 md:w-1/2 md:pl-2">
 
                 <p class="text-center md:text-left md:flex md:items-center md:h-full md:mb-0">
-                    <a href="https://maps.app.goo.gl/SuHZECxR43p3BkU46" target="_blank" title="Get Directions at Google Maps" class="text-grey-darker hover:text-grey-darkest hover:underline">Ordinariate Members of East Tennessee<br />
+                    <a href="https://maps.app.goo.gl/tiYLCJmhNuvaRqP4A" target="_blank" title="Get Directions at Google Maps" class="text-grey-darker hover:text-grey-darkest hover:underline">Ordinariate Members of East Tennessee<br />
                       1810 Howard Dr<br />
                       Knoxville, TN 37918
                       </a>
@@ -87,7 +95,7 @@
     <div class="p4 md:w-1/2 md:pl-2">
 
         <p class="text-center md:text-left md:flex md:items-center md:h-full md:mb-0">
-            <a href="https://maps.app.goo.gl/tiYLCJmhNuvaRqP4A" target="_blank" title="Get Directions at Google Maps" class="text-grey-darker hover:text-grey-darkest hover:underline">Omega Graduate School<br />
+            <a href="https://maps.app.goo.gl/SuHZECxR43p3BkU46" target="_blank" title="Get Directions at Google Maps" class="text-grey-darker hover:text-grey-darkest hover:underline">Omega Graduate School<br />
               500 Oxford Dr<br />
               Dayton, TN 37321
               </a>
@@ -117,32 +125,7 @@
 <div id="">
     <div id="calendar"></div>
 
-    October 8th  | Father Elijah and the Benedictines of the Divine Will <br>
-    October 22nd | &#8224 Matthew Michael Flynn, &#8224 Annie Diaz, &#8224 Chris de Paz, and &#8224 David Klinzing
-    <!-- <status-text>Loading...</status-text> -->
-    <!-- <div v-for="mass in masses_this_week" class="pb-2 mb-2 border-b" > -->
-
-    <!--     <div class="text-center md:text-left md:flex justify-between"> -->
-    <!--         <strong class="block" :class="{'relative -ml-4' : mass.Sung }"><span v-if="mass.Sung" class="w-4">♫ </span><span v-if="mass.Sung">Sung Mass:</span> {{ mass.Votive || mass.Feast }}</strong> -->
-    <!--         <strong class="text-right">{{ mass.Date | moment("dddd, MMM. Do")  }}</strong> -->
-    <!--     </div> -->
-
-    <!--     <div class="flex justify-between"> -->
-    <!--         <div class="italic"> -->
-    <!--                 {{ mass.Intention }}<br> -->
-    <!--                 <span v-if="mass['Requested by']">by {{ mass['Requested by'] }}</span> -->
-    <!--         </div> -->
-    <!--         <div class="text-right"> -->
-    <!--                 {{ mass.Time }}<br> -->
-    <!--                 {{ mass.Location }} -->
-    <!--         </div> -->
-    <!--     </div> -->
-    <!--     <div v-if="mass.Confession" class="text-center italic text-sm"> -->
-    <!--         Confessions will be heard during this mass. -->
-    <!--     </div> -->
-
-    <!-- </div> -->
-
+    To be announced...
 </div>
 </p>
 
@@ -163,7 +146,7 @@
 <li>Acolyte Training</li>
 </ul>
 
-<p>For more information about these groups, view our up-to-date <a href="bulletin.html">event calendar</a> and <a href="https://eepurl.com/iAP9c6">sign up for email alerts</a> about any groups that interest you.</p>
+<p>For more information about these groups, view our up-to-date <font color="#0077B6"><a href="bulletin.html"> event calendar</a></font> and <a href="https://eepurl.com/iAP9c6">sign up for email alerts</a> about any groups that interest you.</p>
 
 <hr />
             </div>
