--- a/mass-intentions.html
+++ b/mass-intentions.html
@@ -25,6 +25,13 @@
 </head>
 
 <body class="font-serif leading-normal text-base bg-grey-lightest antialiased">
+  <style>
+  a {
+  color: #0077B6;
+  background-color: transparent;
+  text-decoration: none;
+  }
+  </style>
 
     <div class="flex flex-col min-h-screen">
         <header class="w-full">
@@ -104,6 +111,9 @@ confessions during the mass.</p>
 
     <p class="pb-4">This mass intention request form is intended for registered and active members of the Ordinariate Members of East Tennessee. We kindly ask that others refrain from submitting requests.</p>
 </div>
+
+<center>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2luJZrTYOiUa6hI_S52Mv0QbMItlNX_gCml008rn_yjWb1g/viewform?embedded=true" width="55%" height="967" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
 
             </div>
         </article>
