--- a/registration.html
+++ b/registration.html
@@ -25,6 +25,13 @@
 </head>
 
 <body class="font-serif leading-normal text-base bg-grey-lightest antialiased">
+  <style>
+  a {
+  color: #0077B6;
+  background-color: transparent;
+  text-decoration: none;
+  }
+  </style>
 
     <div class="flex flex-col min-h-screen">
         <header class="w-full">
@@ -53,7 +60,7 @@
 
 
 
-            <h2>Printable Registration</h2><br><p>If you wish to register and be a part of the Ordinariate, then please fill out the following form and bring or send it to us. You are allowed to be a member at your local parish as well as be a parishoner at our parish.</p>
+            <h2>Printable Registration</h2><br><p>If you wish to register and be a part of the Ordinariate, then please fill out the following form and bring or send it to us at <a href="mailto: easttnordinariate@gmail.com">easttnordinariate@gmail.com</a>. You are allowed to be a member at your local parish as well as be a parishoner at our parish.</p>
 
 
 <br><object data=
