--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,13 @@
 </head>
 
 <body class="font-serif leading-normal text-base bg-grey-lightest antialiased">
+  <style>
+  a {
+  color: #0077B6;
+  background-color: transparent;
+  text-decoration: none;
+  }
+  </style>
 
     <div class="flex flex-col min-h-screen">
         <header class="w-full">
@@ -53,7 +60,8 @@
 
 
 
-            <h2>Contact Ordinariate Members of East Tennessee<br></h2><br>Email - <a href="mailto: easttnordinariate@gmail.com">easttnordinariate@gmail.com</a><br><h2>Stay Up-to-Date, Join Our Email Lists:</h2>
+            <h2>Contact Ordinariate Members of East Tennessee<br></h2><br>Email - <a href="mailto: easttnordinariate@gmail.com">easttnordinariate@gmail.com</a><br>
+            <br><a href="https://www.facebook.com/groups/325390032845767/">Join us on Facebook!</a><br><h2>Stay Up-to-Date, Join Our Email Lists:</h2>
 
 
 
@@ -69,62 +77,62 @@
             <p>The Ordinariate Members of Eastern Tennessee is a lay community of Catholics who wish to attend Ordinariate liturgy.</p>
 
 
-            <h3>Why was the Ordinariate formed?</h3><br>
+            <h2><b>Why was the Ordinariate formed?</h2></b><br>
             The establishment of the Ordinariate of the Chair of Saint Peter was the Vatican’s pastoral response to repeated and persistent inquiries made by Anglican individuals and groups in the United States and Canada who, over time, have come to identify the Catholic Church as their home. Those joining the Ordinariate have discerned they are truly Catholic in what they believe and desire full membership in the Catholic Church.<br>
             <br>
             In November 2009, in response to these repeated and persistent inquiries from Anglican groups worldwide, Pope Benedict XVI issued an apostolic constitution called Anglicanorum coetibus (pronounced Anglican-orum chay-tee-boose). This document authorized the creation of “Ordinariates.” These communities are Catholic yet retain elements of Anglican heritage and liturgical practice. Ordinariates also have been established by the Vatican in the United Kingdom (2011) and Australia (2012).<br>
 
 
-            <h3>Is there precedent for this?</h3><br>
+            <h2><b>Is there precedent for this?</h2></b><br>
             The Ordinariates are new in that they provide a way for Anglicans to enter the Church in a corporate manner; that is, as a group or community, while also retaining some of their Anglican heritage and traditions. However, there are other Catholic Ordinariates, such as military Ordinariates that are responsible for Catholics serving in the armed services and that work in collaboration with local bishops.
 
 
-            <h3>Who is the bishop of the Ordinariate of the Chair of Saint Peter?</h3><br>
+            <h2><b>Who is the bishop of the Ordinariate of the Chair of Saint Peter?</h2></b><br>
             Most Rev. Steven J. Lopes is the first bishop of the Ordinariate of the Chair of Saint Peter. He was appointed by Pope Francis on Nov. 24, 2015 and ordained a bishop on Feb. 2, 2016.
 
 
-            <h3>Who is the Ordinary Emeritus?</h3><br>
+            <h2><b>Who is the Ordinary Emeritus?</h2></b><br>
             Monsignor Jeffrey N. Steenson is the Ordinary Emeritus for the Ordinariate of the Chair of Saint Peter. A Catholic priest since 2009, Msgr. Steenson is the former Episcopal Bishop of Rio Grande and is based in Houston, Texas.
 
 
-            <h3>Are members of the Ordinariates still Anglicans?</h3><br>
+            <h2><b>Are members of the Ordinariates still Anglicans?</h2></b><br>
             No, if you are a member of the Ordinariate you are no longer a member of the Anglican Communion or one of the continuing Anglican jurisdictions. Instead, you are a Latin Rite Roman Catholic of the Ordinariate of the Chair of Saint Peter, and in full communion with the Roman Catholic Church. However, because we maintain our own distinct heritage and traditions, we are Catholics who maintain our distinct Anglican Tradition within the Roman Catholic Church.
 
 
-            <h3>Are Ordinariate communities a part of local dioceses?</h3><br>
+            <h2><b>Are Ordinariate communities a part of local dioceses?</h2></b><br>
             No, they are part of the Ordinariate of the Chair of Saint Peter, which is its own jurisdiction within the Church. However, Ordinariate communities and clergy are encouraged to have close relationships with the dioceses in which they are located and most Ordinariate priests receive faculties to assist in diocesan parishes.
 
 
-            <h3>Is the Ordinariate a separate Rite within the Catholic Church?</h3><br>
+            <h2><b>Is the Ordinariate a separate Rite within the Catholic Church?</h2></b><br>
             No. The Ordinariate exists entirely within the context of the Roman Catholic Church. Its worship, while distinctive, is a form of the Roman Rite. Ordinariate parishes celebrate Mass using Divine Worship: The Missal, a definitive book of liturgical texts promulgated by the Vatican in Advent 2015. This missal uses Prayer Book English — language derived from the classic books of the Anglican liturgical tradition — that is fully Catholic in content and expression.
 
 
-            <h3>What is the process for an Anglican priest to become a Catholic priest?</h3><br>
+            <h2><b>What is the process for an Anglican priest to become a Catholic priest?</h2></b><br>
             Anglican clergy seeking to be ordained as Catholic priests must first complete an extensive process that includes background checks; approval by the head of the Ordinariate and by the Vatican; completion of an approved Ordinariate formation program; and an examination. Celibacy is the norm for the clergy. Permission has been given on a case-by-case basis by the Pope for former Anglican priests who are married to be ordained Catholic priests for the Ordinariate. If widowed, they may not remarry.
 
 
-            <h3>What liturgy is used?</h3><br>
+            <h2><b>What liturgy is used?</h2></b><br>
             The mission of the Ordinariate is particularly experienced in the reverence and beauty of our liturgy, which features Anglican traditions of worship while conforming to Catholic doctrinal, sacramental and liturgical standards. Through Divine Worship: The Missal — the liturgy that unites the Ordinariates throughout the English-speaking world — we share our distinctive commitment to praising God in the eloquence of the Anglican liturgical patrimony and Prayer Book English.
 
 
-            <h3>How do laity become members of the Ordinariate?</h3><br>
+            <h2><b>How do laity become members of the Ordinariate?</h2></b><br>
             Lay people who are not yet Catholic and who wish to join the Ordinariate are required to undergo a period of preparation; apply in writing to join the Ordinariate; and to be confirmed as Catholics — just as others entering the Church do. The formation process currently includes study of the United States Catholic Catechism for Adults. Former Anglicans and Methodists who have already become Catholic and wish to join the Ordinariate may submit an application form to the Ordinariate.
 
 
-            <h3>Can lifelong Catholics join the Ordinariate?</h3><br>
+            <h2><b>Can lifelong Catholics join the Ordinariate?</h2></b><br>
             Catholics who have completed their Sacraments of Initiation (or whose family member has completed the Sacraments of Initiation) in one of our Parishes or Communities, or those who have been drawn to the Church through the evangelizing mission of our Diocese, and their families, may submit an application form to the Ordinariate.  Any Catholic may attend Ordinariate liturgies and functions, just as members of the Ordinariate can attend liturgies and functions at any Catholic parish.
 
 
-            <h3>Does an Anglican or other eligible person who wants to become Catholic have to join the Ordinariate?</h3><br>
+            <h2><b>Does an Anglican or other eligible person who wants to become Catholic have to join the Ordinariate?</h2></b><br>
             No. An individual may seek to join the Ordinariate, join a pastoral provision parish that maintains the Anglican-use heritage but remains a Latin-rite diocesan parish, or attend a local Catholic RCIA and be received in a non-Ordinariate diocesan parish. In all cases, the person must follow all of the usual requirements to become Catholic. An Anglican priest in the United States may also apply to be a diocesan priest through the Pastoral Provision rather than become a part of the Ordinariate.
 
 
-            <h3>How many Ordinariates are there?</h3><br>
+            <h2><b>How many Ordinariates are there?</h2></b><br>
             There are three Ordinariates in the world: Our Lady of Walsingham in the United Kingdom; the Chair of Saint Peter in the United States and Canada; and Our Lady of the Southern Cross in Australia.
 
             <br><br><object data=
             "https://ordinariate.net/documents/2018/2/180206_What_is_OCSP.pdf"
-                            width="650"
+                            width="100%"
                             height="800">
                     </object>
 
