--- a/donate.html
+++ b/donate.html
@@ -25,6 +25,13 @@
 </head>
 
 <body class="font-serif leading-normal text-base bg-grey-lightest antialiased">
+  <style>
+  a {
+  color: #0077B6;
+  background-color: transparent;
+  text-decoration: none;
+  }
+  </style>
 
     <div class="flex flex-col min-h-screen">
         <header class="w-full">
@@ -60,16 +67,15 @@
 
 
         <script type="5d6d169a1c1cf90b8b3d7da7-text/javascript" defer src="../donorbox.org/install-popup-button.js"></script>
-<p align="center"><a class="cta dbox-donation-button" href="https://tithe.ly/give?c=5651776">Give to the Offertory</a>
-<p align="center"><a class="cta dbox-donation-button" href="https://tithe.ly/give?c=5651776">Give to the Building Fund</a>
+<p align="center"><a class="cta dbox-donation-button" href="https://tithe.ly/give_new/www/#/tithely/give-one-time/5651776?giving_to=Offering">Give to the Offertory</a>
+<p align="center"><a class="cta dbox-donation-button" href="https://tithe.ly/give_new/www/#/tithely/give-one-time/5651776?giving_to=Land%20Fund">Give to the Building Fund</a>
 </p>
-<p class="text-sm text-center italic">Login at Tithely to <a href="https://tithe.ly/give?c=5651776">manage your recurring donation</a>.</p>
 
 
 
 
 
-            <h2>Donate By Check</h2><p> Checks made out to <em>Ordinariate Members of East Tennessee</em> can be placed in the collection baskets at Mass or mailed to the address below.<br></p><p>Ordinariate Members of East Tennessee<br></p>
+            <h2>Donate By Check</h2><p> Checks made out to <em>Ordinariate Members of East Tennessee</em> can be placed in the collection baskets at Mass.</p>
 
 
 
