--- a/bulletin.html
+++ b/bulletin.html
@@ -25,6 +25,13 @@
 </head>
 
 <body class="font-serif leading-normal text-base bg-grey-lightest antialiased">
+  <style>
+  a {
+  color: #0077B6;
+  background-color: transparent;
+  text-decoration: none;
+  }
+  </style>
 
     <div class="flex flex-col min-h-screen">
         <header class="w-full">
@@ -53,12 +60,18 @@
 
 
 
-            <h2>Bulletin List</h2><br><p>Find all our parish's bulletins in PDF form below.</p>
+            <h2>Bulletin & Calendar</h2><br><p><center><b>This Week's Bulletin</b></center></p><br>
+            <object data="bulletin.pdf" type="application/pdf" width="100%" height="800px">
+              <p>Alternative text - include a link <a href="bulletin.pdf">to the PDF!</a></p>
+            </object><br>
+
+            <center><a href="https://drive.google.com/drive/folders/1xYiyeVv287Cs2A5LKpkJiuxEz4IQusbt?usp=sharing">Older Bulletins</a></center>
+
 
             <script type="5d6d169a1c1cf90b8b3d7da7-text/javascript" defer src="../donorbox.org/install-popup-button.js"></script>
     <p align="center"><a class="cta dbox-donation-button" href="https://calendar.google.com/calendar/u/0/r?cid=easttnordinariate@gmail.com">Add Our Calendar</a>
 
-<iframe src="https://calendar.google.com/calendar/embed?src=easttnordinariate%40gmail.com&ctz=America%2FChicago" style="border: 0" width="650" height="600" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://calendar.google.com/calendar/embed?src=easttnordinariate%40gmail.com&ctz=America%2FChicago" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 
 
     </div>
