--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,13 @@
 </head>
 
 <body class="font-serif leading-normal text-base bg-grey-lightest antialiased">
+  <style>
+  a {
+  color: #0077B6;
+  background-color: transparent;
+  text-decoration: none;
+  }
+  </style>
 
     <div class="flex flex-col min-h-screen">
         <header class="w-full">
@@ -53,7 +60,7 @@
 
 
 
-            <h2>Bulletin List</h2><br><p>Find all our community's photos below.</p>
+            <h2>Gallery</h2><br><center><p>Find all of our community's photos below.</p></cemter>
 
             <script type="5d6d169a1c1cf90b8b3d7da7-text/javascript" defer src="../donorbox.org/install-popup-button.js"></script>
     <p align="center"><a class="cta dbox-donation-button" href="https://photos.app.goo.gl/pj3MVPnTNoJ3DG6f7">Google Photos</a>
