--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ text-decoration: none;
 <div id="">
     <div id="calendar"></div>
 
-    To be announced...
+October 8th | Father Elijah and the Benedictines of the Divine Will <br>
+Octoebr 22nd | &#8224; Matthew Michael Flynn, &#8224; Annie Diaz, &#8224; Chris de Paz, and &#8224; David Klinzing
 </div>
 </p>
 
