--- a/donate.html
+++ b/donate.html
@@ -68,7 +68,7 @@
 
         <script type="5d6d169a1c1cf90b8b3d7da7-text/javascript" defer src="../donorbox.org/install-popup-button.js"></script>
 <p align="center"><a class="cta dbox-donation-button" href="https://tithe.ly/give_new/www/#/tithely/give-one-time/5651776?giving_to=Offering">Give to the Offertory</a>
-<p align="center"><a class="cta dbox-donation-button" href="https://tithe.ly/give_new/www/#/tithely/give-one-time/5651776?giving_to=Land%20Fund">Give to the Building Fund</a>
+<p align="center"><a class="cta dbox-donation-button" href="https://tithe.ly/give_new/www/#/tithely/give-one-time/5651776?giving_to=Land%20Fund">Give to the Land Fund</a>
 </p>
 
 
