--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ text-decoration: none;
     <div class="flex flex-col min-h-screen">
         <header class="w-full">
     <div class="container mx-auto text-center">
-        <button class="m-0 md:hidden text-red hover:underline" id="nav_menu">Menu</button>
+        <button class="m-0 md:hidden hover:underline" id="nav_menu">Menu</button>
         <nav class="h-px overflow-hidden md:h-auto md:flex justify-around text-center w-full mx-auto mb-4">
           <a class="block my-2 pb-2 md:pt-4 md:m-0 md:py-0 md:border-t-4 border-grey-lightest hover:border-red hover:no-underline" href="index.html">Home</a>
           <a class="block my-2 pb-2 md:pt-4 md:m-0 md:py-0 md:border-t-4 border-grey-lightest hover:border-red hover:no-underline" href="bulletin.html">Bulletin/Events</a>
