--- a/bulletin.html
+++ b/bulletin.html
@@ -36,7 +36,7 @@
     <div class="flex flex-col min-h-screen">
         <header class="w-full">
     <div class="container mx-auto text-center">
-        <button class="m-0 md:hidden text-red hover:underline" id="nav_menu">Menu</button>
+        <button class="m-0 md:hidden hover:underline" id="nav_menu">Menu</button>
         <nav class="h-px overflow-hidden md:h-auto md:flex justify-around text-center w-full mx-auto mb-4">
           <a class="block my-2 pb-2 md:pt-4 md:m-0 md:py-0 md:border-t-4 border-grey-lightest hover:border-red hover:no-underline" href="index.html">Home</a>
           <a class="block my-2 pb-2 md:pt-4 md:m-0 md:py-0 md:border-t-4 border-grey-lightest hover:border-red hover:no-underline" href="bulletin.html">Bulletin/Events</a>
@@ -62,7 +62,7 @@
 
             <h2>Bulletin & Calendar</h2><br><p><center><b>This Week's Bulletin</b></center></p><br>
             <object data="bulletin.pdf" type="application/pdf" width="80%" height="800px">
-              <p>Alternative text - include a link <a href="bulletin.pdf">to the PDF!</a></p>
+              <p>Your device does not support embedded PDFs - <a href="./bulletin.pdf">Click here to be redirect to the PDF!</a></p>
             </object><br>
 
             <center><a href="https://drive.google.com/drive/folders/1xYiyeVv287Cs2A5LKpkJiuxEz4IQusbt?usp=sharing">Older Bulletins</a></center>
