--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ text-decoration: none;
             <div class="p4 md:w-1/2 md:border-r md:pr-2">
 
                 <ul class="list-none text-center md:text-right md:mb-0">
-                                        <li>First &#38; Third Sundays - 4:00 PM</li>
+                                        <li>Second &#38; Fourth Sundays - 4:00 PM</li>
 
                 </ul>
 
@@ -86,7 +86,7 @@ text-decoration: none;
     <div class="p4 md:w-1/2 md:border-r md:pr-2">
 
         <ul class="list-none text-center md:text-right md:mb-0">
-                                <li>Second &#38; Fourth Sundays (Evensong) - 4:00 PM</li>
+                                <li>First &#38; Third Sundays (Evensong) - 4:00 PM</li>
 
         </ul>
 
