--- a/bulletin.html
+++ b/bulletin.html
@@ -62,7 +62,7 @@
 
             <h2>Bulletin & Calendar</h2><br><p><center><b>This Month's Bulletin</b></center></p><br>
             <object data="bulletin.pdf" type="application/pdf" width="100%" height="800px">
-              <p>Your device does not support embedded PDFs - <a href="./bulletin.pdf">Click here to be redirect to the PDF!</a></p>
+              <p>Your device does not support embedded PDFs - <a href="./bulletin.pdf">Click here to be redirected to the PDF!</a></p>
             </object><br>
 
             <center><a href="https://drive.google.com/drive/folders/1xYiyeVv287Cs2A5LKpkJiuxEz4IQusbt?usp=sharing">Older Bulletins</a></center>
