--- a/registration.html
+++ b/registration.html
@@ -66,7 +66,7 @@
 <br><object data=
 "https://files.ecatholic.com/3059/documents/2022/1/membershipform2021%20print-3.pdf?t=1643313910000"
                 width="100%"
-                height="800%">
+                height="800">
         </object>
 
 
