--- a/donate.html
+++ b/donate.html
@@ -60,7 +60,7 @@
 
 
 
-            <h2>Donate Online</h2><p>You may use the buttons below to make one-time or regular recurring donations to Ordinariate Members of East Tennessee via Tithely. Please be aware that processing fees are significantly lower with the default Bank Transfer method, though you may use credit or debit cards if you prefer.&nbsp;</p>
+            <h2>Donate Online</h2><p>You may use the button below to make one-time or regular recurring donations to Ordinariate Members of East Tennessee via Tithely. Please be aware that processing fees are significantly lower with the default Bank Transfer method, though you may use credit or debit cards if you prefer.&nbsp;</p>
 
 
 
