--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ text-decoration: none;
         <article class="container mx-auto px-2 md:px-4 bg-white min-h-full max-w-screen flex-grow">
             <div class="max-w-2xl mx-auto">
                 <p><aside class="pt-4">
-    <h2 class="text-lg block max-w-xs relative mt-0 -mb-2 leading-none bg-white mx-auto text-center">Regular Mass and Confession Times</h2>
+    <h2 class="text-lg block max-w-xs relative mt-0 -mb-2 leading-none bg-white mx-auto text-center"> <b> Regular Mass and Confession Times </h2> </b>
     <div class=" border-2 border-grey-lightest p-2 mx-auto">
                 <div class="md:flex flex-wrap items-center mb-2">
             <h3 class="w-full my-2">Ordinariate Community in East Tennessee</h3>
