--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@ October 22nd | &#8224; Matthew Michael Flynn, &#8224; Annie Diaz, &#8224; Chris 
 
 <p><a href="mass-intentions.html">See more intentions, or schedule your own <i class="fas fa-chevron-right"></i></a></p>
 
-<h2>Calendars &amp; Bulletin</h2>
+<h2> <b> Calendars &amp; Bulletin </h2> </b>
 
 <p>Our <a href="bulletin.html">online bulletin</a> has details regarding special Masses, blessings, events, and other opportunities to be involved in our community.</p>
 
 <hr />
 
-<h2>Chapel Community Groups</h2>
+<h2> <b> Chapel Community Groups</h2> </b>
 
 <ul>
 <li>First Friday Rosary Group (Jefferson City)</li>
