--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,10 @@
             <h2>Gallery</h2><br><center><p>Find all of our community's photos below.</p></cemter>
 
             <script type="5d6d169a1c1cf90b8b3d7da7-text/javascript" defer src="../donorbox.org/install-popup-button.js"></script>
-    <p align="center"><a class="cta dbox-donation-button" href="https://photos.app.goo.gl/pj3MVPnTNoJ3DG6f7">Google Photos</a>
+    <p align="center"><a class="cta dbox-donation-button" href="https://photos.app.goo.gl/pj3MVPnTNoJ3DG6f7">Choral Evensong</a>
+
+        <script type="5d6d169a1c1cf90b8b3d7da7-text/javascript" defer src="../donorbox.org/install-popup-button.js"></script>
+    <p align="center"><a class="cta dbox-donation-button" href="https://photos.app.goo.gl/xQHy9nUp6wArK7YR9">Box of Joy and English Country Dance</a>
 
       <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
       <div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
