--- a/gallery.html
+++ b/gallery.html
@@ -68,6 +68,9 @@
         <script type="5d6d169a1c1cf90b8b3d7da7-text/javascript" defer src="../donorbox.org/install-popup-button.js"></script>
     <p align="center"><a class="cta dbox-donation-button" href="https://photos.app.goo.gl/xQHy9nUp6wArK7YR9">Box of Joy and English Country Dance</a>
 
+        <script type="5d6d169a1c1cf90b8b3d7da7-text/javascript" defer src="../donorbox.org/install-popup-button.js"></script>
+    <p align="center"><a class="cta dbox-donation-button" href="https://photos.app.goo.gl/xveKDDUs4RiNFT1G7">Fall Celebration</a>
+
       <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
       <div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
         data-link="https://photos.app.goo.gl/pj3MVPnTNoJ3DG6f7"
