--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ text-decoration: none;
 <div id="">
     <div id="calendar"></div>
 
-October 8th | Father Elijah and the Benedictines of the Divine Will <br>
-October 22nd | &#8224; Matthew Michael Flynn, &#8224; Annie Diaz, &#8224; Chris de Paz, and &#8224; David Klinzing
+November 12th | Marylou Serowik <br>
+November 26th | &#8224; Jordan Larson
 </div>
 </p>
 
